In order to use latex, try to install Mathjax https://baeseongsu.github.io/posts/apply-mathjax-to-jekyll-blog/ Feb 2 2021 11:31pm

--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,13 @@ toc: true
 
 paginate: 10
 
+# For Mathjax
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:   # Rouge Options › https://github.com/jneen/rouge#full-options
