Include id of google analytics in _config.yml Feb 3 9:25 pm.

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ baseurl: ''
 timezone: Europe/Berlin
 
 google_analytics:
-  id: ''          # Fill with your Google Analytics ID
+  id: 'G-SMHG05PMS1'          # Fill with your Google Analytics ID
   pv:
     # The Google Analytics pageviews switch.
     # DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
