--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+google_site_verification: google4ac439145e69cec0.html # change to your verification string
 # --------------------------
 
 
